--- a/app/src/main/res/layout/my_order_item.xml
+++ b/app/src/main/res/layout/my_order_item.xml
@@ -3,6 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              xmlns:tools="http://schemas.android.com/tools"
               android:background="@color/bg_color"
               android:orientation="vertical"
     >
@@ -17,16 +18,18 @@
         >
 
         <TextView
+            android:id="@+id/tv_order_no"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="订单号:EX123123123"
+            tools:text="订单号:EX123123123"
             />
 
         <TextView
+            android:id="@+id/tv_order_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="拍卖中"
+            tools:text="拍卖中"
             android:textColor="@color/red"
             />
     </LinearLayout>
@@ -35,51 +38,59 @@
         android:layout_height="2px"
         android:background="@color/divider_color"
         />
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/ll_order_goods_list"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:padding="10dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
         >
-        <ImageView
-            android:id="@+id/iv_my_auction"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:src="@drawable/qq"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:padding="10dp"
+            >
+            <ImageView
+                android:id="@+id/iv_my_auction"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:src="@drawable/qq"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠"
+                android:layout_toRightOf="@+id/iv_my_auction"
+                android:layout_marginLeft="10dp"
+                android:maxLines="4"
+                android:ellipsize="end"
+                android:textColor="@color/gray_33"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="¥97"
+                android:textColor="@color/red"
+                android:layout_toRightOf="@+id/iv_my_auction"
+                android:layout_marginLeft="10dp"
+                android:layout_alignParentBottom="true"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="x1"
+                android:layout_marginLeft="10dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:background="@color/divider_color"
             />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠"
-            android:layout_toRightOf="@+id/iv_my_auction"
-            android:layout_marginLeft="10dp"
-            android:maxLines="4"
-            android:ellipsize="end"
-            android:textColor="@color/gray_33"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="¥97"
-            android:textColor="@color/red"
-            android:layout_toRightOf="@+id/iv_my_auction"
-            android:layout_marginLeft="10dp"
-            android:layout_alignParentBottom="true"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="x1"
-            android:layout_marginLeft="10dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            />
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:background="@color/divider_color"
-        />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -89,20 +100,23 @@
         android:paddingRight="10dp"
         >
         <TextView
+            android:id="@+id/tv_order_time"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="2018-01-01 12:12:12"
+            tools:text="2018-01-01 12:12:12"
             />
         <TextView
+            android:id="@+id/tv_order_goods_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="共1件商品"
+            tools:text="共1件商品"
             />
         <TextView
+            android:id="@+id/tv_order_total_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="合计:¥21"
+            tools:text="合计:¥21"
             android:layout_marginLeft="5dp"
             />
     </LinearLayout>
@@ -119,6 +133,7 @@
         android:layout_margin="10dp"
         >
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_order_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="取消订单"
@@ -127,7 +142,7 @@
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            app:radius="5dp"
+            app:radius="4dp"
             app:solidColor="@color/gray_d7"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
@@ -142,12 +157,13 @@
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            app:radius="5dp"
+            app:radius="4dp"
             app:solidColor="@color/gray_66"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
             />
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_order_pay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="去支付"
@@ -156,12 +172,13 @@
             android:paddingLeft="15dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            app:radius="5dp"
+            app:radius="4dp"
             app:solidColor="@color/red"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
             />
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_order_sure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="确认收货"
@@ -170,12 +187,13 @@
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            app:radius="5dp"
+            app:radius="4dp"
             app:solidColor="@color/red"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
             />
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_order_tuikuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="申请退款"
@@ -184,7 +202,7 @@
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            app:radius="5dp"
+            app:radius="4dp"
             app:solidColor="@color/red"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
