--- a/app/src/main/res/layout/my_order_act.xml
+++ b/app/src/main/res/layout/my_order_act.xml
@@ -6,9 +6,14 @@
               android:layout_height="match_parent"
               android:background="@color/bg_color"
     >
-<include layout="@layout/app_title"/>
+    <include layout="@layout/app_title"/>
     <android.support.design.widget.TabLayout
+        android:id="@+id/tb_my_order"
         android:layout_width="match_parent"
+        app:tabIndicatorColor="@color/red"
+        app:tabSelectedTextColor="@color/red"
+        app:tabTextColor="@color/gray_66"
+        app:tabMode="scrollable"
         android:layout_height="43dp">
 
     </android.support.design.widget.TabLayout>
@@ -18,6 +23,7 @@
         android:background="@color/divider_color"
         />
     <android.support.v4.view.ViewPager
+        android:id="@+id/vp_my_order"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
