--- a/app/src/main/res/layout/my_order_item.xml
+++ b/app/src/main/res/layout/my_order_item.xml
@@ -51,7 +51,7 @@
             android:padding="10dp"
             >
             <ImageView
-                android:id="@+id/iv_my_auction"
+                android:id="@+id/iv_order_img"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠"
-                android:layout_toRightOf="@+id/iv_my_auction"
+                android:layout_toRightOf="@+id/iv_order_img"
                 android:layout_marginLeft="10dp"
                 android:maxLines="4"
                 android:ellipsize="end"
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:text="¥97"
                 android:textColor="@color/red"
-                android:layout_toRightOf="@+id/iv_my_auction"
+                android:layout_toRightOf="@+id/iv_order_img"
                 android:layout_marginLeft="10dp"
                 android:layout_alignParentBottom="true"
                 />
@@ -200,6 +200,21 @@
             android:layout_gravity="right"
             android:paddingRight="10dp"
             android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            app:radius="4dp"
+            app:solidColor="@color/red"
+            android:textColor="@color/white"
+            android:layout_marginLeft="10dp"
+            />
+        <com.github.fastshape.MyTextView
+            android:id="@+id/tv_order_evaluation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="去评价"
+            android:layout_gravity="right"
+            android:paddingRight="15dp"
+            android:paddingLeft="15dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             app:radius="4dp"
