--- a/app/src/main/res/layout/my_order_item_include.xml
+++ b/app/src/main/res/layout/my_order_item_include.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
@@ -17,6 +17,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             tools:src="@drawable/qq"
+            android:scaleType="centerCrop"
             />
         <TextView
             android:id="@+id/tv_order_name"
@@ -54,4 +55,4 @@
         android:layout_height="2px"
         android:background="@color/divider_color"
         />
-</merge>
+</LinearLayout>
