--- a/app/src/main/res/layout/my_money_act.xml
+++ b/app/src/main/res/layout/my_money_act.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -33,9 +34,10 @@
                     android:textSize="14sp"
                     />
                 <TextView
+                    android:id="@+id/tv_my_balance_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="500.33"
+                    tools:text="500.33"
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:layout_marginTop="15dp"
@@ -54,6 +56,7 @@
                 android:padding="10dp"
                 >
                <com.github.fastshape.MyLinearLayout
+                   android:id="@+id/ll_my_balance_chongzhi"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
@@ -65,7 +68,8 @@
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
-                       android:src="@drawable/qq"
+                       android:src="@drawable/chongzhi"
+                       android:layout_marginRight="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
@@ -76,6 +80,7 @@
                        />
                </com.github.fastshape.MyLinearLayout>
                 <com.github.fastshape.MyLinearLayout
+                    android:id="@+id/ll_my_balance_tixian"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="45dp"
@@ -88,7 +93,8 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/qq"
+                        android:src="@drawable/tixian"
+                        android:layout_marginRight="10dp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -126,11 +132,10 @@
                 app:ptr_ratio_of_header_height_to_refresh="1.2"
                 >
                 <com.library.base.view.MyRecyclerView
-                    android:id="@+id/rv_jiaoyi_mingxi"
+                    android:id="@+id/rv_my_balance_mingxi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     >
-
                 </com.library.base.view.MyRecyclerView>
             </in.srain.cube.views.ptr.PtrClassicFrameLayout>
         </LinearLayout>
