--- a/app/src/main/res/layout/youhuiquan_act.xml
+++ b/app/src/main/res/layout/youhuiquan_act.xml
@@ -8,6 +8,7 @@
     >
 <include layout="@layout/app_title"/>
     <android.support.design.widget.TabLayout
+        android:id="@+id/tv_youhuiquan"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         app:tabIndicatorColor="@color/red"
@@ -21,6 +22,7 @@
         android:background="@color/divider_color"
         />
     <android.support.v4.view.ViewPager
+        android:id="@+id/vp_youhuiquan"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
