--- a/app/src/main/res/layout/youhuiquan_frag.xml
+++ b/app/src/main/res/layout/youhuiquan_frag.xml
@@ -4,7 +4,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/gray_bg"
+              android:background="@color/white"
     >
     <com.library.base.ProgressLayout
         android:id="@id/pl_load"
