--- a/app/src/main/res/layout/add_bank_popu.xml
+++ b/app/src/main/res/layout/add_bank_popu.xml
@@ -13,6 +13,7 @@
     android:paddingRight="10dp"
     >
     <TextView
+        android:id="@+id/tv_add_bank_select_cancel"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="取消"
@@ -28,6 +29,7 @@
         android:textColor="@color/red"
         />
     <TextView
+        android:id="@+id/tv_add_bank_select_sure"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="确定"
