--- a/app/src/main/res/layout/ti_xian_result_act.xml
+++ b/app/src/main/res/layout/ti_xian_result_act.xml
@@ -20,7 +20,7 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/qq"
+                android:src="@drawable/tixian_result"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
                 />
@@ -30,7 +30,7 @@
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
-                    tools:text="提现申请提交成功\n客服会在三个工作日内\n处理您的申请"
+                    tools:text="提现申请提交成功\n客服会在3个工作日内\n处理您的申请"
                     android:lineSpacingExtra="3dp"
                     />
 
@@ -42,6 +42,7 @@
                 android:layout_marginTop="50dp"
                 >
                 <com.github.fastshape.MyTextView
+                    android:id="@+id/tv_tixian_result_mingxi"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:text="提现记录"
@@ -55,6 +56,7 @@
                     app:all_line="true"
                     />
                 <com.github.fastshape.MyTextView
+                    android:id="@+id/tv_tixian_result"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:text="返回"
